--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
-		<title>My Trip Plan</title>
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<title>Plan your trip itinerary</title>
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/addplacemodal.css">
